--- a/BancaJornal.Web/wwwroot/index.html
+++ b/BancaJornal.Web/wwwroot/index.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banca Jornal</title>
-    <base href="/" />
+    <base href="/bancajornal/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div style="text-align: center; padding: 50px;">
+            <h3>Carregando Banca Jornal...</h3>
+            <p>Por favor, aguarde.</p>
+        </div>
+    </div>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
